[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/knights.png" type="Texture" id=2]
[ext_resource path="res://src/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://src/Player/Idle.gd" type="Script" id=4]
[ext_resource path="res://src/Player/Move.gd" type="Script" id=5]
[ext_resource path="res://src/Player/Attack.gd" type="Script" id=6]
[ext_resource path="res://src/Weapon/PlayerSword.tscn" type="PackedScene" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4

[sub_resource type="Animation" id=4]

[sub_resource type="Animation" id=5]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
motion/sync_to_physics = true
script = ExtResource( 1 )

[node name="Pivot" type="Position2D" parent="."]

[node name="WeaponPivot" type="Position2D" parent="Pivot"]
position = Vector2( 0, -8 )

[node name="PlayerSword" parent="Pivot/WeaponPivot" instance=ExtResource( 7 )]

[node name="Sprite" type="Sprite" parent="Pivot"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 64, 16, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7.67533 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "INIT"
anims/INIT = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/roll_dash = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="SpriteTest" type="Sprite" parent="."]
visible = false
position = Vector2( -23.2238, -23.2238 )
scale = Vector2( 0.274257, 0.274257 )
texture = ExtResource( 8 )
[connection signal="transitioned" from="StateMachine" to="." method="_on_StateMachine_transitioned"]
